--- a/templates/login.html
+++ b/templates/login.html
@@ -30,7 +30,7 @@
                     <i class="bi bi-google"></i>
                     Sign in with Google
                 </button>
-                <p class="signup-text">Don't have an account? <a href="signup.html">Sign up</a></p>
+                <p class="signup-text">Don't have an account? <a href="/signup.html" class="btn btn-signup signup-btn">SIGN UP</a></p>
             </form>
         </div>
     </div>
